# pydantic-cal

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
examples/: cached_calibration.py  smoke.py
src/pydantic_cal/: __init__.py  _geometry.py  bootstrap.py  decomposition.py  evaluators.py  metrics.py  scalers.py
src/pydantic_cal/crazy/: __init__.py
tests/: test_evaluators.py  test_smece.py
